# WhyGLViewer

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  vcpkg-configuration.json  vcpkg.json
src/: CMakeLists.txt  OpenGLFunc.h  OpenGLRenderer.h  glview.cpp  glview.h  main.cpp  model.cpp  model.h  opengl_renderer.cpp  opengl_renderer.h  shaders.qrc  singleton.h  standard.h
src/Application/: Application.h  Engine.cpp  Engine.h  Game.cpp  Game.h  Player.cpp  Player.h  TestObject.cpp  TestObject.h
src/Assets/Materials/: brick.mat  suzanne.mat
src/Assets/Shader/: 1.model_loading.frag  1.model_loading.vert
src/Assets/Shaders/: 1.model_loading.frag  1.model_loading.vert  Shaders.qrc  fragment.glsl  vertex.glsl
src/Component/: AnimationComponent.cpp  AnimationComponent.h  CameraComponent.cpp  CameraComponent.h  Component.cpp  Component.h  LightComponent.cpp  LightComponent.h  MeshComponent.cpp  MeshComponent.h  PhysicsComponent.cpp  PhysicsComponent.h  PlayerControllerComponent.cpp  PlayerControllerComponent.h
src/Graphic/: GraphicsAPI.cpp  GraphicsAPI.h  ShaderProgram.cpp  ShaderProgram.h  Texture.cpp  Texture.h  VertexLayout.h
src/Gui/: glview.cpp  glview.h  glwindow.cpp  glwindow.h  glwindow.ui
src/IO/: FileSystem.cpp  FileSystem.h
src/Input/: InputManager.cpp  InputManager.h
src/Physics/: Collider.cpp  Collider.h  KinematicCharacterController.cpp  KinematicCharacterController.h  PhysicsManager.cpp  PhysicsManager.h  RigidBody.cpp  RigidBody.h
src/Render/: Game.cpp  Material.cpp  Material.h  Mesh.cpp  Mesh.h  OpenGLRenderer.cpp  OpenGLRenderer.h  RenderQueue.cpp  RenderQueue.h
src/Renderer/: GraphicsAPI.cpp  GraphicsAPI.h  OpenGLRenderer.cpp  OpenGLRenderer.h
src/Scene/: GameObject.cpp  GameObject.h  Scene.cpp  Scene.h
src/Util/: Common.h  FileUtil.cpp  FileUtil.h  Logger.cpp  Logger.h  OpenGLFunc.h
src/shader/: 1.model_loading.frag  1.model_loading.vert
